force-app/main/default/objects/Staff__c/fields/FlightInformation__c.field-meta.xml
<CustomField>
    <fullName>FlightInformation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FlightInformation</label>
    <referenceTo>Flight_Information__c</referenceTo>
    <relationshipLabel>Staff</relationshipLabel>
    <relationshipName>Staff</relationshipName>
    <type>Lookup</type>
</CustomField>