force-app/main/default/objects/Staff__c/fields/Permissions__c.field-meta.xml
<CustomField>
    <fullName>Permissions__c</fullName>
    <label>Permissions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airbus</fullName>
            </value>
            <value>
                <fullName>Boenig</fullName>
            </value>
            <value>
                <fullName>Antonov</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>