force-app/main/default/objects/Staff__c/fields/SecurityToken__c.field-meta.xml
<CustomField>
    <fullName>SecurityToken__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SecurityToken</label>
    <referenceTo>SecurityToken__c</referenceTo>
    <relationshipLabel>Staff</relationshipLabel>
    <relationshipName>Staff</relationshipName>
    <type>Lookup</type>
</CustomField>